# rustic

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  install.sh
.github/workflows/: build.yml  ci.yml  pages.yml  release.yml
docs/: _config.yml  index.md
examples/hello-infection/: Cargo.toml
examples/hello-infection/src/: main.rs
ideas/: epidemic_infections.md  pandemic_agent.md  service_bootstrap.md
pandemic-agent/: Cargo.toml  default-blocklist.toml
pandemic-agent/src/: handlers.rs  main.rs  socket.rs  systemd.rs  users.rs
pandemic-cli/: Cargo.toml
pandemic-cli/src/: agent.rs  bootstrap.rs  daemon.rs  main.rs  registry.rs  service.rs  system.rs
pandemic-common/: Cargo.toml
pandemic-common/src/: agent.rs  client.rs  config.rs  lib.rs  registry.rs  tests.rs
pandemic-console/: Cargo.toml  build.rs
pandemic-console/src/: main.rs
pandemic-console/web/: index.html  main.js  package-lock.json  package.json  style.css
pandemic-console/web/src/: main.js  style.css
pandemic-daemon/: Cargo.toml
pandemic-daemon/src/: connection.rs  daemon.rs  event_bus.rs  handlers.rs  main.rs
pandemic-iam/: Cargo.toml  README.md  example-config.toml
pandemic-iam/src/: config.rs  credentials.rs  handlers.rs  iam_anywhere.rs  main.rs  signer.rs  signing.rs
pandemic-protocol/: Cargo.toml
pandemic-protocol/src/: lib.rs
pandemic-proxy/: Cargo.toml  infection.toml
pandemic-proxy/src/: main.rs
pandemic-rest/: Cargo.toml
pandemic-rest/src/: auth.rs  events.rs  handlers.rs  lib.rs  main.rs  middleware.rs  websocket.rs
pandemic-udp/: Cargo.toml
pandemic-udp/src/: main.rs
scripts/: bump-version.sh  create-ca.sh  create-client-cert.sh  generate-registry.sh  get-amazonlinux-qemu.sh  setup-complete.sh  setup-iam-anywhere.sh
