[workspace]
members = [
    "pandemic-daemon",
    "pandemic-cli", 
    "pandemic-protocol",
    "pandemic-common",
    "examples/hello-infection",
    "pandemic-udp",
    "pandemic-rest",
    "pandemic-console"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"