[package]
name = "pandemic-agent"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "pandemic-agent"
path = "src/main.rs"

[dependencies]
pandemic-protocol = { path = "../pandemic-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = "0.2"