[package]
name = "pandemic-common"
version = "0.4.0"
edition = "2021"

[dependencies]
pandemic-protocol = { path = "../pandemic-protocol" }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
sha256 = "1.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"