[package]
name = "pandemic-console"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "pandemic-console"
path = "src/main.rs"

[dependencies]
pandemic-protocol = { path = "../pandemic-protocol" }
pandemic-common = { path = "../pandemic-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
include_dir = "0.7"
mime_guess = "2.0"