[package]
name = "pandemic-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pandemic"
path = "src/main.rs"

[dependencies]
pandemic-protocol = { path = "../pandemic-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = "0.30"