[package]
name = "pandemic-iam"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "pandemic-iam"
path = "src/main.rs"

[dependencies]
pandemic-protocol = { path = "../pandemic-protocol" }
pandemic-common = { path = "../pandemic-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.0"
x509-parser = "0.15"
rsa = { version = "0.9", features = ["sha2"] }
p256 = "0.13"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
url = "2.0"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }