[package]
name = "pandemic-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pandemic-proxy"
path = "src/main.rs"

[dependencies]
pandemic-protocol = { path = "../pandemic-protocol" }
pandemic-common = { path = "../pandemic-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }