[package]
name = "pandemic-rest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pandemic-rest"
path = "src/main.rs"

[dependencies]
pandemic-protocol = { path = "../pandemic-protocol" }
pandemic-common = { path = "../pandemic-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"