[package]
name = "pandemic-udp"
version = "0.4.0"
edition = "2021"

[dependencies]
pandemic-protocol = { path = "../pandemic-protocol" }
pandemic-common = { path = "../pandemic-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }