[package]
name = "hello-infection"
version = "0.2.0"
edition = "2021"

[dependencies]
pandemic-protocol = { path = "../../pandemic-protocol" }
pandemic-common = { path = "../../pandemic-common" }
tokio = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }